2003-11-17 Peter Bienstman  <Peter.Bienstman@UGent.be>

	* planar.h: Rework eps_at, mu_at.
	* planar.cpp: Ditto.

2003-10-29 Peter Bienstman  <Peter.Bienstman@ugent.be>

	* planar.cpp: Autoset N=1.

2003-07-11 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* planar.h: Consolidate sign choice.
	* planar.cpp: Ditto.

2003-01-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* planar.h: Add field plot.
	* planar.cpp: Ditto.

2002-11-08 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* planar.h: Warn if wavelength not set.
	* planar.cpp: Ditto.

2002-05-31 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* planar.h: Allow dynamic polarisation change.
	* planar.cpp: Ditto.
